--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
     <title>The Long Road Home</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Load Kaboom.js from CDN -->
-    <script src="https://unpkg.com/kaboom@3000.0.0/dist/kaboom.js"></script>
+    <script src="https://unpkg.com/kaboom@2000.2.9/dist/kaboom.js"></script>
 </head>
 <body>
     <div id="game"></div>
