--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>The Long Road Home</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/kaboom@2000.2.9/dist/kaboom.js" onerror="console.error('Kaboom CDN failed'); document.write('<script src=\"assets/kaboom.js\"></script>')"></script>
+    <script src="https://unpkg.com/kaboom@2000.2.9/dist/kaboom.js"></script>
 </head>
 <body>
     <div id="game"></div>
