--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 <body>
     <div id="game">
-        <div id="image-box"></div>
-        <div id="ship"></div>
+        <div id="image-box">
+            <div id="ship"></div>
+        </div>
         <div id="hud">
             <h1 id="title">The Long Road Home</h1>
             <div id="stats-background"></div>
             <div id="stats">
-                Distance: <span id="distance">1000</span> |
-                Fuel: <span id="fuel">100</span> |
-                Food: <span id="food">100</span> |
-                Credits: <span id="credits">100</span>
+                Distance: <span id="distance">2250</span> M km |
+                Fuel: <span id="fuel">960</span> tons |
+                Food: <span id="food">600</span> kg |
+                Credits: <span id="credits">100</span> |
+                Family: <span id="family">4</span>
             </div>
         </div>
         <div id="event-area">
