--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <p id="event-text"></p>
             <div id="choices"></div>
         </div>
+        <div id="crew-area">
+            <div id="crew-background"></div>
+            <h2 id="crew-title">Crew</h2>
+            <div id="crew-list"></div>
+        </div>
     </div>
 </body>
 </html>
