--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div id="game">
+        <div id="status-area">
+            <div id="status-background"></div>
+            <h2 id="status-title">Status</h2>
+            <div id="status-list"></div>
+        </div>
         <div id="image-box">
             <div id="ship"></div>
         </div>
