--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </div>
         </div>
         <div class="divider"></div>
+        <button id="resetButton" class="choice-button">Reset Game</button>
     </div>
 </body>
 </html>
